# ComicMarketCollection

./: .gitignore  AGENTS.md  README.md  config.yaml.example  main.py  pyproject.toml
openspec/: config.yaml
research/: README.md  audience_baseline_methodology.md  booth_density.md  comiket_vs_comicup_multi_era_study.md  genre_distribution.md  semantic_description.md  social_media_adoption.md
research/scripts/: chi_square_test.py  disassembled.txt  moran_i_calculator.py  string_const_generate_multi_era_report_100.txt  string_const_generate_multi_era_report_101.txt  string_const_generate_multi_era_report_60.txt  string_const_generate_multi_era_report_63.txt  string_const_generate_multi_era_report_72.txt  string_const_generate_multi_era_report_73.txt  string_const_generate_multi_era_report_88.txt
research/sql/: booth_density_circles.sql  genre_distribution_dbi.sql  semantic_description_length.sql  social_media_adoption_rate.sql
src/: analytics.py  c107_importer.py  c108_genre_importer.py  circle_sync.py  circle_tagger.py  config.py  cp31_analyzer.py  cp31_importer.py  cpsp_importer.py  db.py  goods_extractor.py  graph_builder.py  label_propagator.py  multi_era_analyzer.py  route_solver.py  semantic_analyzer.py  spatial_mapper.py  twitter_sync.py  visualizer.py
src/utils/: observability.py
tests/: test_analytics.py  test_c107.py  test_c108_genre_importer.py  test_circle_tagger.py  test_cp31.py  test_cpsp.py  test_db.py  test_goods_extractor.py  test_multi_era.py  test_semantic_analyzer.py  test_spatial_lpa.py  test_twitter_sync.py  test_visualizer.py
(+129 files in other folders)
