[project]
name = "comicmarketcollection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "pillow>=10.2.0",
    "pyyaml>=6.0.1",
    "pytest>=8.0.0",
    "langfuse>=2.57.0",
]

