[project]
name = "comicmarketcollection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "pillow>=10.2.0",
    "pyyaml>=6.0.1",
    "pytest>=8.0.0",
    "langfuse>=2.57.0",
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240109",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "wordcloud>=1.9.3",
]


